--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,7 +10,7 @@
    
     <title>Outbreak</title>
   </head>
-  <body>
+  <body style="scroll-behavior: smooth;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
